Bug 2457 - kernel panic on rmmod acpi modules due to /proc references
Summary: kernel panic on rmmod acpi modules due to /proc references
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Processor (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Shaohua
URL:
Keywords:
: 2519 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-04-06 10:21 UTC by Anil S Keshavamurthy
Modified: 2004-05-11 23:33 UTC (History)
3 users (show)

See Also:
Kernel Version: Linux 2.6.5-rc2
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
The patch removes teh proc entries before removing proc directory (2.59 KB, patch)
2004-04-06 10:28 UTC, Anil S Keshavamurthy
Details | Diff
port Anil's patch to other ACPI modules (10.30 KB, patch)
2004-04-15 00:02 UTC, Shaohua
Details | Diff
patch for 2.4 kernel (10.49 KB, patch)
2004-04-28 00:24 UTC, Shaohua
Details | Diff

Description Anil S Keshavamurthy 2004-04-06 10:21:07 UTC
Distribution: 
Hardware Environment:Tiger4(IA64 platform)
Software Environment:linux kernel 2.6.5-rc2
Problem Description:can't rmmod processor.ko

Steps to reproduce: Compile the acpi processor driver as a module by having 
CONFIG_ACPI_PROCESSOR=m. And do insmod processor.ko and then rmmod 
processor.ko. The rmmod processor.ko panics the kernel thread which is 
performing rmmod.
Comment 1 Anil S Keshavamurthy 2004-04-06 10:28:47 UTC
Created attachment 2525 [details]
The patch removes teh proc entries before removing proc directory

The attached patch fixes the issues. The problem was that proc direcory was
getting removed without deleting proc entries.
Comment 2 Shaohua 2004-04-15 00:02:22 UTC
Created attachment 2595 [details]
port Anil's patch to other ACPI modules

port Anil's patch to other ACPI modules
Comment 3 Shaohua 2004-04-16 00:10:56 UTC
*** Bug 2519 has been marked as a duplicate of this bug. ***
Comment 4 Shaohua 2004-04-28 00:24:27 UTC
Created attachment 2739 [details]
patch for 2.4 kernel
Comment 5 Len Brown 2004-05-11 23:33:34 UTC
shipped in 2.6.6, and on top of 2.4.27-pre2 -- closing. 

Note You need to log in before you can comment on or make changes to this bug.