[ACPI] rmmod ACPI modules vs /proc from Anil S Keshavamurthy and David Shaohua Li http://bugzilla.kernel.org/show_bug.cgi?id=2457