drivers/acpi/fan.c
@@ -526,6 +526,16 @@ op_minus
 id|ENODEV
 )paren
 suffix:semicolon
+id|acpi_device_dir
+c_func
+(paren
+id|device
+)paren
+op_member_access_from_pointer
+id|owner
+op_assign
+id|THIS_MODULE
+suffix:semicolon
 )brace
 multiline_comment|/* &squot;status&squot; [R/W] */
 id|entry
@@ -583,6 +593,10 @@ c_func
 (paren
 id|device
 )paren
+suffix:semicolon
+id|entry-&gt;owner
+op_assign
+id|THIS_MODULE
 suffix:semicolon
 )brace
 id|return_VALUE
@@ -985,6 +999,10 @@ c_func
 op_minus
 id|ENODEV
 )paren
+suffix:semicolon
+id|acpi_fan_dir-&gt;owner
+op_assign
+id|THIS_MODULE
 suffix:semicolon
 id|result
 op_assign
